--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -79,7 +79,7 @@ th:hover {
   background-color: inherit !important; /* Ensure no hover effect */
 }
 
-@media print {
+/* @media print {
   body {
       margin: 0;
       padding: 0;
@@ -116,4 +116,4 @@ th:hover {
   .print-only {
       display: block !important;
   }
-}
+} */
